--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "@react-spring/parallax": "^9.4.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-scroll": "^1.8.4",
     "react-spring": "^9.4.2"
   },
   "devDependencies": {
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
+    "@types/react-scroll": "^1.8.3",
     "@vitejs/plugin-react": "^1.0.7",
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.6",
