--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@react-spring/parallax": "^9.4.2",
+    "esbuild": "^0.14.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scroll": "^1.8.4",
