--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   },
   "dependencies": {
     "@react-spring/parallax": "^9.4.2",
+    "@types/react-burger-menu": "^2.8.3",
     "esbuild": "^0.14.21",
     "react": "^17.0.2",
+    "react-burger-menu": "^3.0.6",
     "react-dom": "^17.0.2",
     "react-scroll": "^1.8.4",
     "react-spring": "^9.4.2"
